@@ -1,4 +1,7 @@
 import React from 'react';
+import { BrowserRouter, Route, Link} from 'react-router-dom'
+import {HomePage} from './pages/HomePage';
+import {ProductPage} from './pages/ProductPage';
 
 function App() {
   const openMenu = () => {
@@ -8,115 +11,49 @@ function App() {
     document.querySelector(".sidebar").classList.remove("open")
   }
   return (
-    <div className="grid-container">
-      <header className="header">
-        <div className="brand">
-          <button onClick={openMenu}>
-            &#9776;
-          </button>
-          <a href="index.html">amazona</a>
-        </div>
-        <div className="header-links">
-          <a href="cart.html">Cart</a>
-          <a href="signin.html">Sign In</a>
-        </div>
-      </header>
-      <aside className="sidebar">
-        <h3>Shopping Categories</h3>
-        <button className="sidebar-close-button" onClick={closeMenu}>x</button>
-        <ul className="categories">
-          <li>
-            <a href="index.html">Pants</a>
-          </li>
-  
-          <li>
-            <a href="index.html">Shirts</a>
-          </li>
+    <BrowserRouter>
+      <div className="grid-container">
+        <header className="header">
+          <div className="brand">
+            <button onClick={openMenu}>
+              &#9776;
+            </button>
+            <Link to="/" >amazona</Link>
+          </div>
+          <div className="header-links">
+            <a href="cart.html">Cart</a>
+            <a href="signin.html">Sign In</a>
+          </div>
+        </header>
+        <aside className="sidebar">
+          <h3>Shopping Categories</h3>
+          <button className="sidebar-close-button" onClick={closeMenu}>x</button>
+          <ul className="categories">
+            <li>
+              <a href="index.html">Pants</a>
+            </li>
+    
+            <li>
+              <a href="index.html">Shirts</a>
+            </li>
 
-          <li>
-            <a href="index.html">Shoes</a>
-          </li>
+            <li>
+              <a href="index.html">Shoes</a>
+            </li>
 
-        </ul>
-      </aside>
-      <main className="main">
-        <div className="content">
-          <ul className="products">
-            <li>
-              <div className="product">
-                <img className="product-image" src="/images/d1.jpg" alt="product" />
-                <div className="product-name">
-                  <a href="product.html">Slim Shirt</a>
-                </div>
-                <div className="product-brand">Nike</div>
-                <div className="product-price">$60</div>
-                <div className="product-rating">4.5 Stars (10 Reviews)</div>
-              </div>
-            </li>
-            <li>
-              <div className="product">
-                <img className="product-image" src="/images/d1.jpg" alt="product" />
-                <div className="product-name">
-                  <a href="product.html">Slim Shirt</a>
-                </div>
-                <div className="product-brand">Nike</div>
-                <div className="product-price">$60</div>
-                <div className="product-rating">4.5 Stars (10 Reviews)</div>
-              </div>
-            </li>
-            <li>
-              <div className="product">
-                <img className="product-image" src="/images/d1.jpg" alt="product" />
-                <div className="product-name">
-                  <a href="product.html">Slim Shirt</a>
-                </div>
-                <div className="product-brand">Nike</div>
-                <div className="product-price">$60</div>
-                <div className="product-rating">4.5 Stars (10 Reviews)</div>
-              </div>
-            </li>
-            <li>
-              <div className="product">
-                <img className="product-image" src="/images/d1.jpg" alt="product" />
-                <div className="product-name">
-                  <a href="product.html">Slim Shirt</a>
-                </div>
-                <div className="product-brand">Nike</div>
-                <div className="product-price">$60</div>
-                <div className="product-rating">4.5 Stars (10 Reviews)</div>
-              </div>
-            </li>
-            <li>
-              <div className="product">
-                <img className="product-image" src="/images/d1.jpg" alt="product" />
-                <div className="product-name">
-                  <a href="product.html">Slim Shirt</a>
-                </div>
-                <div className="product-brand">Nike</div>
-                <div className="product-price">$60</div>
-                <div className="product-rating">4.5 Stars (10 Reviews)</div>
-              </div>
-            </li>
-            <li>
-              <div className="product">
-                <img className="product-image" src="/images/d1.jpg" alt="product" />
-                <div className="product-name">
-                  <a href="product.html">Slim Shirt</a>
-                </div>
-                <div className="product-brand">Nike</div>
-                <div className="product-price">$60</div>
-                <div className="product-rating">4.5 Stars (10 Reviews)</div>
-              </div>
-            </li>
-  
           </ul>
-        </div>
-  
-      </main>
-      <footer className="footer">
-        All right reserved.
-      </footer>
-    </div>
+        </aside>
+        <main className="main">
+          <div className="content">
+            <Route path="/product/:id" component={ProductPage} />
+            <Route path="/" exact={true} component={HomePage} />
+          </div>
+        </main>
+        <footer className="footer">
+          All right reserved.
+        </footer>
+      </div>
+    </BrowserRouter>
   );
 }
 
